src/test/deca/context/valid/created/testPass2/redefMethRetSubType.deca
class D{
}
class A{
    
}
class B extends A{
    A get(){}
}
class C extends B{
    A set(){}
    int slut(){}
    C get(){}

}
