src/test/deca/context/invalid/created/testPass2/surchargeRetType.deca
class D{
}
class A{
    
}
class B extends A{
    A get(){}
}
class C extends B{
    D get(){}
}
